--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Revenge of the Rocket Patrol</title>
+    <title>Forest Patrol</title>
     <script src="lib/phaser.js"></script>
     <script src="src/prefabs/Rocket.js"></script>
     <script src="src/prefabs/Spaceship.js"></script>
@@ -13,7 +13,10 @@
     <script src="src/main.js"></script>
     <style>
         body {
-            background-color:beige;
+            background-color:#000000;
+            text-align: center;
+            padding-top: 5%;
+            padding-bottom: 5%;
         }
         </style>
 </head>
