--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forest Patrol</title>
     <script src="lib/phaser.js"></script>
-    <script src="src/prefabs/Rocket.js"></script>
+    <script src="src/prefabs/Archer.js"></script>
     <script src="src/prefabs/Spaceship.js"></script>
     <script src="src/scenes/Play.js"></script>
     <script src="src/scenes/Menu.js"></script>
