--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Forest Patrol</title>
     <script src="lib/phaser.js"></script>
     <script src="src/prefabs/Archer.js"></script>
-    <script src="src/prefabs/Spaceship.js"></script>
+    <script src="src/prefabs/Wagon.js"></script>
     <script src="src/scenes/Play.js"></script>
     <script src="src/scenes/Menu.js"></script>
     <script src="src/main.js"></script>
