--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forest Patrol</title>
+    <title>Wagon Watch</title>
     <script src="lib/phaser.js"></script>
     <script src="src/prefabs/Archer.js"></script>
     <script src="src/prefabs/Wagon.js"></script>
