--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
     <script src="src/main.js"></script>
     <style>
         body {
-            background-color:#000000;
+            background-color:#af3737;
             text-align: center;
             padding-top: 5%;
-            padding-bottom: 5%;
+            /*padding-bottom: 5%;*/
         }
         </style>
 </head>
-<body>
+<body>    
+
+    <!--<div style="width:100px;height:100px;position:relative;">
+        <div style="width: 100%; height: 100%; position: absolute; top: 0; left: 0; background-color: #000000;">
+            <canvas style="image-rendering: pixelated; width:1500px; height:750px;"></canvas>
+        </div>
+        <div style="z-index: 10; background-color: #000000;">
+        </div>
+        
+    </div>-->
+    
 </body>
 </html>
