--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="src/main.js"></script>
     <style>
         body {
-            background-color:#af3737;
+            background-color:#000000;
             text-align: center;
             padding-top: 5%;
             /*padding-bottom: 5%;*/
